--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a multi-line script
-        run: |
-          pypyVersions=$(curl https://downloads.python.org/pypy/versions.json)
-          toolsetVersion="3.8"
-
-          echo $pypyVersions | jq -r --arg toolsetVersion $toolsetVersion '.[]
-            | select((.python_version | contains($toolsetVersion)) and .stable == true).files[]
-            | select(.arch == "x64" and .platform == "linux").download_url' | head -1
+        run: wget https://package.datadome.co/linux/DataDome-Apache-latest.tgz
