--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a multi-line script
-        run: wget https://package.datadome.co/linux/DataDome-Apache-latest.tgz
+        run: |
+          Invoke-WebRequest https://package.datadome.co/linux/DataDome-Apache-latest.tgz -OutFile DataDome-Apache-latest.tgz
+          ls
