--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,4 @@ jobs:
         run: |
           Invoke-WebRequest https://package.datadome.co/linux/DataDome-Apache-latest.tgz -OutFile DataDome-Apache-latest.tgz
           ls
+        shell: pwsh
