--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
       - name: Run a multi-line script
         run: |
-          wget --no-cookies --no-check-certificate https://package.datadome.co/linux/DataDome-Apache-latest.tgz
+          wget https://package.datadome.co/linux/DataDome-Apache-latest.tgz
           ls
