--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,11 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Run a multi-line script
         run: |
-          wget  https://package.datadome.co/linux/DataDome-Apache-latest.tgz
+          wget  http://package.datadome.co/linux/DataDome-Apache-latest.tgz
           ls
