--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,14 +8,24 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  ubuntu:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Run a multi-line script
+      - name: Download on ubuntu
         run: |
           wget  http://package.datadome.co/linux/DataDome-Apache-latest.tgz
+          ls
+  macos:
+    runs-on: macos-latest
+    steps:
+      - name: Download on MacOS
+        run: |
+          wget  http://package.datadome.co/linux/DataDome-Apache-latest.tgz
+          ls
+  windows:
+    runs-on:
+    steps:
+      - name: Download on windows
+        run: |
+          Invoke-WebRequest https://package.datadome.co/linux/DataDome-Apache-latest.tgz -UseBasicParsing -OutFile DataDome-Apache-latest.tgz -Verbose -Debug
           ls
