--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ name: Test
 # Controls when the workflow will run
 on:
   repository_dispatch:
+    types: [test-workflow-trigger]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
