--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,17 +11,10 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: npm i
-        run: npm i
-
-      # Runs a set of commands using the runners shell
-      - name: npm rebuild
-        run: npm rebuild
+      - name: Download
+        run: wget --tries=1 https://package.datadome.co/linux/DataDome-Apache-latest.tgz
