--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,13 +8,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  ubuntu:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Download
-        run: wget --tries=1 https://package.datadome.co/linux/DataDome-Apache-latest.tgz
+      - name: Greetings
+        run: |
+          Write-Host "Hello world"
+          Start-Sleep -seconds 60
+        shell: pwsh
