--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,6 +20,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ${{ github.event.inputs.versions }}
+        version: [3.10.2, 3.10.1]
     steps:
       - run: Write-Host "${{ matrix.version }}"
