--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,4 @@
+
 name: Python versions runner
 on:
   workflow_dispatch:
@@ -15,11 +16,23 @@ defaults:
     shell: pwsh
 
 jobs:
+  process-inpit:
+    runs-on: ubuntu-latest
+    outputs:
+      tool-versions: ${{ steps.split-input.outputs.tool-versions }}
+    steps:
+      - id: split-input
+        name: Split input into array
+        run: |
+          $array = "${{ github.event.inputs.versions }}".split(",")
+          Write-Host "::set-output name=tool-versions::${array}"
+
   trigger_builds:
+    needs: process-inpit
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        version: '${{ github.event.inputs.versions }}'
+        version: ${{ needs.process-inpit.outputs.tool-versions }}
     steps:
       - run: Write-Host "${{ matrix.version }}"
