--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,7 @@ jobs:
   ubuntu:
     runs-on: ubuntu-latest
     steps:
-      - name: Greetings
-        run: |
-          Write-Host "Hello world"
-          Start-Sleep -seconds 60
+      - env:
+          MESSAGE: ${{ github.event.client_payload.version }}
+        run: echo $MESSAGE
         shell: pwsh
