--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
             "client_payload" = @{
               "version" = "${{ matrix.version }}"
             }
-          } | Convertfrom-Json
+          } | ConvertTo-Json
           $headers = @{
             Authorization="Bearer ${{ secrets.PERSONAL_TOKEN }}"
           }
