--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,7 +39,8 @@ jobs:
           $version = ${{ matrix.version }}
           
           foreach ($workflowRun in $workflowRuns) {
-            if (((Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($workflowRun.id)/jobs").jobs.steps.name -like "*$version").Count -gt 0) {
+            $workflowRunJobs = (Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($workflowRun.id)/jobs").jobs
+            if (($workflowRunJobs.steps.name -like "*$version").Count -gt 0 -and $workflowRun.id -eq $workflowRunJobs[0].id) {
               $workflowToCheck = $workflowRun
             }
           }
