--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,13 @@ jobs:
           $workflowRuns = (Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs").workflow_runs | Where-Object {$_.status -like "*progress*" -and $_.id -ne $env:GITHUB_RUN_ID}
           $version = ${{ matrix.version }}
           
-          $workflowToCheck = $workflowRuns | Where-Object {((Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($_.id)/jobs").jobs.steps.name -match "$version").Count -gt 0}
+          $workflowToCheck = $workflowRuns | Where-Object {
+            Write-Host "$($_.id)"
+            $workflowRunJobs = "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($_.id)/jobs").jobs
+            $workflowRunJobs
+            $workflowRunJobs.steps.name
+            ($workflowRunJobs.steps.name -match "$version").Count -gt 0
+          }
           Write-Host "Triggered workflow with Id: $($workflowToCheck.id) , Url: $($workflowToCheck.url)"
           while ($workflowToCheck.status -ne "completed") {
             Start-Sleep -Seconds 20
