--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,7 @@ jobs:
           
           $workflowToCheck = $workflowRuns | Where-Object {
             Write-Host "$($_.id)"
-            $workflowRunJobs = "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($_.id)/jobs").jobs
+            $workflowRunJobs = ("$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($_.id)/jobs").jobs
             $workflowRunJobs
             $workflowRunJobs.steps.name
             ($workflowRunJobs.steps.name -match "$version").Count -gt 0
