--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,7 +43,8 @@ jobs:
             $workflowRunJobs = (Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($_.id)/jobs").jobs
             Write-Host "$($workflowRunJobs)"
             Write-Host "$($workflowRunJobs.steps.name)"
-            ($workflowRunJobs.steps.name -match "$version").Count
+            Write-Host $($workflowRunJobs.steps.name -match "$version")
+            Write-Host $(($workflowRunJobs.steps.name -match "$version").Count)
             ($workflowRunJobs.steps.name -match "$version").Count -gt 0
           }
           Write-Host "Triggered workflow with Id: $($workflowToCheck.id) , Url: $($workflowToCheck.url)"
