--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
           Invoke-RestMethod -uri "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/dispatches" -method POST -headers $headers -body $payload
           Start-Sleep -seconds 20
           $workflowRuns = (Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs").workflow_runs | Where-Object {$_.status -like "*progress*" -and $_.id -ne $env:GITHUB_RUN_ID}
-          $version = '${{ matrix.version }}''
+          $version = ${{ matrix.version }}
           
           Write-Host $($version)
           $workflowToCheck = $workflowRuns | Where-Object {
