--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,17 +36,11 @@ jobs:
           Invoke-RestMethod -uri "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/dispatches" -method POST -headers $headers -body $payload
           Start-Sleep -seconds 20
           $workflowRuns = (Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs").workflow_runs | Where-Object {$_.status -like "*progress*" -and $_.id -ne $env:GITHUB_RUN_ID}
-          $version = ${{ matrix.version }}
+          $version = "${{ matrix.version }}"
           
-          Write-Host $($version)
+          Write-Host "$($version)"
           $workflowToCheck = $workflowRuns | Where-Object {
-            Write-Host "$($_.id)"
-            $workflowRunJobs = (Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($_.id)/jobs").jobs
-            Write-Host "$($workflowRunJobs)"
-            Write-Host "$($workflowRunJobs.steps.name)"
-            Write-Host $($workflowRunJobs.steps.name -match "$version")
-            Write-Host $(($workflowRunJobs.steps.name -match "$version").Count)
-            ($workflowRunJobs.steps.name -match "$version").Count -gt 0
+            ((Invoke-RestMethod "$env:GITHUB_API_URL/repos/$env:GITHUB_REPOSITORY/actions/runs/$($_.id)/jobs").jobs.steps.name -match "$version").Count -gt 0
           }
           Write-Host "Triggered workflow with Id: $($workflowToCheck.id) , Url: $($workflowToCheck.url)"
           while ($workflowToCheck.status -ne "completed") {
