--- a/.github/workflows/Workloads.yml
+++ b/.github/workflows/Workloads.yml
@@ -9,15 +9,16 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  windows22:
     # The type of runner that the job will run on
     runs-on: windows-2022
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: git status
+      - run: git status
+      - run: git --version
+  windows19:
+    runs-on: windows-2019
+    steps:
+      - uses: actions/checkout@v2
+      - run: git status
+      - run: git --version
