--- a/.github/workflows/test-workloads.yml
+++ b/.github/workflows/test-workloads.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - run: |
           Set-Location "C:\Program Files (x86)\Microsoft Visual Studio\Installer\"
-          $InstallPath = "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise"
+          $InstallPath = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise"
           $componentsToAdd = @(
             "Microsoft.Net.Component.4.6.1.SDK"
           )
