--- a/.github/workflows/test-output.yml
+++ b/.github/workflows/test-output.yml
@@ -20,5 +20,5 @@ jobs:
             Conclusion = "success";
             Url = "https://github.com/shilovmaksim/python-versions/actions/runs/1851594292"
           }
-          $result
+          $result | Foreach-Object {Write-Host $_}
         shell: pwsh
