--- a/.github/workflows/test-output.yml
+++ b/.github/workflows/test-output.yml
@@ -10,15 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          [array]$result = @{
+          [array]$result = [PSCustomObject]@{
             Version = "3.10.0-rc.2";
             Conclusion = "success";
             Url = "https://github.com/shilovmaksim/python-versions/actions/runs/1851594293"
           }
-          $result += @{
+          $result += [PSCustomObject]@{
             Version = "3.10.0";
             Conclusion = "success";
             Url = "https://github.com/shilovmaksim/python-versions/actions/runs/1851594292"
           }
-          $result | Foreach-Object {Write-Host $_}
+          $result | Foreach-Object {$_ | Out-String}
         shell: pwsh
